コインモデルを追加

--- a/GameTemplate/Game/Game.vcxproj
+++ b/GameTemplate/Game/Game.vcxproj
@@ -1813,6 +1813,7 @@
   </ItemGroup>
   <ItemGroup>
     <MeshContentTask Include="Assets\modelData\Bullet.fbx" />
+    <MeshContentTask Include="Assets\modelData\coin.fbx" />
     <MeshContentTask Include="Assets\modelData\unityChan.fbx" />
   </ItemGroup>
   <ItemGroup>
