--- a/GameTemplate/Game/Game.vcxproj.filters
+++ b/GameTemplate/Game/Game.vcxproj.filters
@@ -62,6 +62,9 @@
     <MeshContentTask Include="Assets\modelData\Bullet.fbx">
       <Filter>Assets\modelData</Filter>
     </MeshContentTask>
+    <MeshContentTask Include="Assets\modelData\coin.fbx">
+      <Filter>Assets\modelData</Filter>
+    </MeshContentTask>
   </ItemGroup>
   <ItemGroup>
     <ImageContentTask Include="Assets\sprite\dummy.png">
