PlayerHPクラスを追加

--- a/GameTemplate/Game/Game.vcxproj
+++ b/GameTemplate/Game/Game.vcxproj
@@ -1771,6 +1771,7 @@
     <ClCompile Include="GameOver.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="mTimer.cpp" />
+    <ClCompile Include="PlayerHP.cpp" />
     <ClCompile Include="Sound.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="stdafx.cpp">
@@ -1805,6 +1806,7 @@
     <ClInclude Include="GameClear.h" />
     <ClInclude Include="GameOver.h" />
     <ClInclude Include="mTimer.h" />
+    <ClInclude Include="PlayerHP.h" />
     <CLInclude Include="resource.h" />
     <ClInclude Include="Sound.h" />
     <ClInclude Include="stdafx.h" />
@@ -1828,6 +1830,13 @@
   </ItemGroup>
   <ItemGroup>
     <Media Include="Assets\sound\Title.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <ImageContentTask Include="Assets\sprite\heart.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <ImageContentTask Include="Assets\sprite\heart2.png" />
+    <ImageContentTask Include="Assets\sprite\heart3.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
