--- a/GameTemplate/Game/Game.vcxproj.filters
+++ b/GameTemplate/Game/Game.vcxproj.filters
@@ -1,14 +1,30 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ImageContentTask Include="Assets\sprite\dummy.png" />
-    <ImageContentTask Include="Assets\sprite\title.png" />
-    <ImageContentTask Include="Assets\sprite\botanose.png" />
-    <ImageContentTask Include="Assets\sprite\Game.png" />
-    <ImageContentTask Include="Assets\sprite\heart.png" />
-    <ImageContentTask Include="Assets\sprite\heart2.png" />
-    <ImageContentTask Include="Assets\sprite\heart3.png" />
-    <ImageContentTask Include="Assets\sprite\Coin.png" />
+    <ImageContentTask Include="Assets\sprite\botanose.png">
+      <Filter>Assets\sprite</Filter>
+    </ImageContentTask>
+    <ImageContentTask Include="Assets\sprite\Coin.png">
+      <Filter>Assets\sprite</Filter>
+    </ImageContentTask>
+    <ImageContentTask Include="Assets\sprite\dummy.png">
+      <Filter>Assets\sprite</Filter>
+    </ImageContentTask>
+    <ImageContentTask Include="Assets\sprite\Game.png">
+      <Filter>Assets\sprite</Filter>
+    </ImageContentTask>
+    <ImageContentTask Include="Assets\sprite\heart.png">
+      <Filter>Assets\sprite</Filter>
+    </ImageContentTask>
+    <ImageContentTask Include="Assets\sprite\heart2.png">
+      <Filter>Assets\sprite</Filter>
+    </ImageContentTask>
+    <ImageContentTask Include="Assets\sprite\heart3.png">
+      <Filter>Assets\sprite</Filter>
+    </ImageContentTask>
+    <ImageContentTask Include="Assets\sprite\title.png">
+      <Filter>Assets\sprite</Filter>
+    </ImageContentTask>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Bullet.cpp" />
@@ -34,12 +50,27 @@
     <ClCompile Include="Title.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <MeshContentTask Include="Assets\modelData\Bullet.fbx" />
-    <MeshContentTask Include="Assets\modelData\coin.fbx" />
-    <MeshContentTask Include="Assets\modelData\EnemyBullet.fbx" />
-    <MeshContentTask Include="Assets\modelData\unityChan.fbx" />
-    <MeshContentTask Include="Assets\modelData\yuka.fbx" />
-    <MeshContentTask Include="Assets\modelData\Title.fbx" />
+    <MeshContentTask Include="Assets\modelData\Bullet.fbx">
+      <Filter>Assets\modeData</Filter>
+    </MeshContentTask>
+    <MeshContentTask Include="Assets\modelData\coin.fbx">
+      <Filter>Assets\modeData</Filter>
+    </MeshContentTask>
+    <MeshContentTask Include="Assets\modelData\EnemyBullet.fbx">
+      <Filter>Assets\modeData</Filter>
+    </MeshContentTask>
+    <MeshContentTask Include="Assets\modelData\unityChan.fbx">
+      <Filter>Assets\modeData</Filter>
+    </MeshContentTask>
+    <MeshContentTask Include="Assets\modelData\yuka.fbx">
+      <Filter>Assets\modeData</Filter>
+    </MeshContentTask>
+    <MeshContentTask Include="Assets\modelData\Title.fbx">
+      <Filter>Assets\modeData</Filter>
+    </MeshContentTask>
+    <MeshContentTask Include="Assets\modelData\stage.fbx">
+      <Filter>Assets\modeData</Filter>
+    </MeshContentTask>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Bullet.h" />
@@ -62,11 +93,8 @@
     <ClInclude Include="CoinCount.h" />
     <ClInclude Include="EnemyBullet.h" />
     <ClInclude Include="Stage.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ResourceCompile Include="Game.rc">
-      <Filter>Resource Files</Filter>
-    </ResourceCompile>
+    <ClInclude Include="Sound.h" />
+    <ClInclude Include="Title.h" />
   </ItemGroup>
   <ItemGroup>
     <MeshContentTask Include="Assets\modelData\unityChan.fbx">
@@ -84,15 +112,31 @@
     <MeshContentTask Include="Assets\modelData\EnemyBullet.fbx">
       <Filter>Assets\modelData</Filter>
     </MeshContentTask>
-    <MeshContentTask Include="Assets\modelData\stage.fbx">
-      <Filter>Assets\modelData</Filter>
-    </MeshContentTask>
   </ItemGroup>
   <ItemGroup>
-    <CustomBuild Include="Assets\sound\Title.wav" />
-    <CustomBuild Include="Assets\sound\Button.wav" />
+    <CustomBuild Include="Assets\sound\Button.wav">
+      <Filter>Assets\sound</Filter>
+    </CustomBuild>
+    <CustomBuild Include="Assets\sound\Title.wav">
+      <Filter>Assets\sound</Filter>
+    </CustomBuild>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Game.rc" />
+    <ResourceCompile Include="Game.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Filter Include="Assets">
+      <UniqueIdentifier>{a76d26f8-f810-47c0-b044-de2667c4eeb9}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Assets\modeData">
+      <UniqueIdentifier>{66d878f0-24e7-43f9-afa0-dc57ada3d21f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Assets\sound">
+      <UniqueIdentifier>{ee73fdf9-0c53-4429-a2ca-b12e7fc45878}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Assets\sprite">
+      <UniqueIdentifier>{da06a027-d11e-4271-bd46-28b7893285f9}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
 </Project>
