--- a/GameTemplate/Game/Game.vcxproj
+++ b/GameTemplate/Game/Game.vcxproj
@@ -1767,6 +1767,7 @@
     <ClCompile Include="Coin2D.cpp" />
     <ClCompile Include="CoinCount.cpp" />
     <ClCompile Include="Enemy.cpp" />
+    <ClCompile Include="Enemy2.cpp" />
     <ClCompile Include="EnemyBullet.cpp" />
     <ClCompile Include="EnemyCreate.cpp" />
     <ClCompile Include="Fade.cpp" />
@@ -1807,6 +1808,7 @@
     <ClInclude Include="Coin2D.h" />
     <ClInclude Include="CoinCount.h" />
     <ClInclude Include="Enemy.h" />
+    <ClInclude Include="Enemy2.h" />
     <ClInclude Include="EnemyBullet.h" />
     <ClInclude Include="EnemyCreate.h" />
     <ClInclude Include="Fade.h" />
