--- a/GameTemplate/Game/Game.vcxproj.filters
+++ b/GameTemplate/Game/Game.vcxproj.filters
@@ -49,27 +49,10 @@
     <ClCompile Include="Stage.cpp" />
     <ClCompile Include="Title.cpp" />
     <ClCompile Include="Enemy2.cpp" />
+    <ClCompile Include="Boss.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <MeshContentTask Include="Assets\modelData\Bullet.fbx">
-      <Filter>Assets\modeData</Filter>
-    </MeshContentTask>
-    <MeshContentTask Include="Assets\modelData\coin.fbx">
-      <Filter>Assets\modeData</Filter>
-    </MeshContentTask>
-    <MeshContentTask Include="Assets\modelData\EnemyBullet.fbx">
-      <Filter>Assets\modeData</Filter>
-    </MeshContentTask>
-    <MeshContentTask Include="Assets\modelData\unityChan.fbx">
-      <Filter>Assets\modeData</Filter>
-    </MeshContentTask>
-    <MeshContentTask Include="Assets\modelData\yuka.fbx">
-      <Filter>Assets\modeData</Filter>
-    </MeshContentTask>
     <MeshContentTask Include="Assets\modelData\Title.fbx">
-      <Filter>Assets\modeData</Filter>
-    </MeshContentTask>
-    <MeshContentTask Include="Assets\modelData\stage.fbx">
       <Filter>Assets\modeData</Filter>
     </MeshContentTask>
     <MeshContentTask Include="Assets\modelData\Bullet.fbx" />
@@ -79,7 +62,30 @@
     <MeshContentTask Include="Assets\modelData\yuka.fbx" />
     <MeshContentTask Include="Assets\modelData\Title.fbx" />
     <MeshContentTask Include="Assets\modelData\stage.fbx" />
-    <MeshContentTask Include="Assets\modelData\Enemy.fbx" />
+    <MeshContentTask Include="Assets\modelData\Bullet.fbx">
+      <Filter>Assets\modeData</Filter>
+    </MeshContentTask>
+    <MeshContentTask Include="Assets\modelData\coin.fbx">
+      <Filter>Assets\modeData</Filter>
+    </MeshContentTask>
+    <MeshContentTask Include="Assets\modelData\Enemy.fbx">
+      <Filter>Assets\modeData</Filter>
+    </MeshContentTask>
+    <MeshContentTask Include="Assets\modelData\EnemyBullet.fbx">
+      <Filter>Assets\modeData</Filter>
+    </MeshContentTask>
+    <MeshContentTask Include="Assets\modelData\stage.fbx">
+      <Filter>Assets\modeData</Filter>
+    </MeshContentTask>
+    <MeshContentTask Include="Assets\modelData\unityChan.fbx">
+      <Filter>Assets\modeData</Filter>
+    </MeshContentTask>
+    <MeshContentTask Include="Assets\modelData\yuka.fbx">
+      <Filter>Assets\modeData</Filter>
+    </MeshContentTask>
+    <MeshContentTask Include="Assets\modelData\Enemy2.fbx">
+      <Filter>Assets\modeData</Filter>
+    </MeshContentTask>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Bullet.h" />
@@ -105,6 +111,7 @@
     <ClInclude Include="Sound.h" />
     <ClInclude Include="Title.h" />
     <ClInclude Include="Enemy2.h" />
+    <ClInclude Include="Boss.h" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Sound.h" />
