--- a/GameTemplate/Game/Game.vcxproj
+++ b/GameTemplate/Game/Game.vcxproj
@@ -1764,6 +1764,7 @@
   <ItemGroup>
     <ClCompile Include="Boss.cpp" />
     <ClCompile Include="Bullet.cpp" />
+    <ClCompile Include="BulletCount.cpp" />
     <ClCompile Include="Coin.cpp" />
     <ClCompile Include="Coin2D.cpp" />
     <ClCompile Include="CoinCount.cpp" />
@@ -1806,6 +1807,7 @@
   <ItemGroup>
     <ClInclude Include="Boss.h" />
     <ClInclude Include="Bullet.h" />
+    <ClInclude Include="BulletCount.h" />
     <ClInclude Include="Coin.h" />
     <ClInclude Include="Coin2D.h" />
     <ClInclude Include="CoinCount.h" />
