効果音を追加

--- a/GameTemplate/Game/Game.vcxproj.filters
+++ b/GameTemplate/Game/Game.vcxproj.filters
@@ -199,6 +199,15 @@
     <Media Include="Assets\sound\coinGet.wav">
       <Filter>Assets\sound</Filter>
     </Media>
+    <Media Include="Assets\sound\shot.wav">
+      <Filter>Assets\sound</Filter>
+    </Media>
+    <Media Include="Assets\sound\Enemydamege.wav">
+      <Filter>Assets\sound</Filter>
+    </Media>
+    <Media Include="Assets\sound\Bossdamege.wav">
+      <Filter>Assets\sound</Filter>
+    </Media>
   </ItemGroup>
   <ItemGroup>
     <Image Include="Assets\sprite\Title.jpg">
