--- a/GameTemplate/Game/Game.vcxproj
+++ b/GameTemplate/Game/Game.vcxproj
@@ -1877,7 +1877,10 @@
     <None Include="Assets\effect\test1.efk" />
   </ItemGroup>
   <ItemGroup>
+    <Media Include="Assets\sound\Bossdamege.wav" />
     <Media Include="Assets\sound\coinGet.wav" />
+    <Media Include="Assets\sound\Enemydamege.wav" />
+    <Media Include="Assets\sound\shot.wav" />
   </ItemGroup>
   <ItemGroup>
     <ImageContentTask Include="Assets\sprite\GameOver.png" />
