プレイヤーがやられたときにBGMを再生

--- a/GameTemplate/Game/Game.vcxproj.filters
+++ b/GameTemplate/Game/Game.vcxproj.filters
@@ -218,5 +218,8 @@
     <Media Include="Assets\sound\GameBgm (online-audio-converter.com).wav">
       <Filter>Assets\sound</Filter>
     </Media>
+    <Media Include="Assets\sound\Playerdamege.wav">
+      <Filter>Assets\sound</Filter>
+    </Media>
   </ItemGroup>
 </Project>
