--- a/GameTemplate/Game/Game.vcxproj
+++ b/GameTemplate/Game/Game.vcxproj
@@ -1889,6 +1889,7 @@
     <Media Include="Assets\sound\coinGet.wav" />
     <Media Include="Assets\sound\Enemydamege.wav" />
     <Media Include="Assets\sound\GameBgm (online-audio-converter.com).wav" />
+    <Media Include="Assets\sound\Playerdamege.wav" />
     <Media Include="Assets\sound\shot.wav" />
   </ItemGroup>
   <ItemGroup>
