エネミー2が弾を撃つと音が出る

--- a/GameTemplate/Game/Game.vcxproj
+++ b/GameTemplate/Game/Game.vcxproj
@@ -1888,6 +1888,7 @@
     <Media Include="Assets\sound\Bossdamege.wav" />
     <Media Include="Assets\sound\coinGet.wav" />
     <Media Include="Assets\sound\Enemydamege.wav" />
+    <Media Include="Assets\sound\Enemyshot.wav" />
     <Media Include="Assets\sound\GameBgm (online-audio-converter.com).wav" />
     <Media Include="Assets\sound\Playerdamege.wav" />
     <Media Include="Assets\sound\shot.wav" />
