--- a/GameTemplate/Game/Game.vcxproj.filters
+++ b/GameTemplate/Game/Game.vcxproj.filters
@@ -221,5 +221,8 @@
     <Media Include="Assets\sound\Playerdamege.wav">
       <Filter>Assets\sound</Filter>
     </Media>
+    <Media Include="Assets\sound\Enemyshot.wav">
+      <Filter>Assets\sound</Filter>
+    </Media>
   </ItemGroup>
 </Project>
